alignment fixing for title and backtotop

--- a/style.css
+++ b/style.css
@@ -344,6 +344,8 @@ button.backtotop{
     cursor: pointer;
     display: none;
     border-width: 0;
+    justify-content: center;
+    align-content: center;
 }
 
 footer{
@@ -761,7 +763,7 @@ img.review-img{
     width: 20vw;
 }
 div.title{
-    font-size: 4ch;
+    font-size: 3.5ch;
 }
 div.myCart {
     right: auto;
@@ -778,7 +780,7 @@ div.myCart-low#myCart {
         margin: 1vh 4vw;
     }   
     div.title{
-        font-size: 3.5ch;
+        font-size: 3.2ch;
     }
     div.navbar{
         font-size: 1.5ch;
